# grafikaHF1

./: CMakeLists.txt
src/: Skeleton.cpp
